refactor: room by course name references
